--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/ydui.js",
   "style": "dist/ydui.css",
   "keywords": [
-    "YDUI Touch",
+    "vmui",
     "ui",
     "ydui",
     "vue",
