--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss": "^5.2.14",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "vue": "^2.1.10",
     "vue-loader": "^10.0.2",
     "vue-resource": "^1.0.3",
