--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "http://git.meiwan.me/zhangl/vmui.git"
   },
   "scripts": {
-    "dev": "webpack-dev-server --content-base example/ --port 4321 --inline --hot --host 0.0.0.0 --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --content-base docs/example/ --port 1234 --inline --hot --host 0.0.0.0 --config build/webpack.dev.conf.js",
     "build:rem:components": "webpack --config build/webpack.dist.components.rem.conf.js",
     "build:px:components": "webpack --config build/webpack.dist.components.px.conf.js",
     "build:prod": "webpack --config build/webpack.dist.prod.conf.js",
