--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "postcss": "^5.2.14",
+    "qrcode-npm": "0.0.3",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
