--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^2.4.0",
+    "weixin-js-sdk": "^1.2.0",
     "ydcss-rem2px": "^1.0.0"
   }
 }
