--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --content-base docs/example/ --port 1234 --inline --hot --host 0.0.0.0 --config build/webpack.dev.conf.js",
+    "build:example": "webpack --config build/webpack.dev.conf.js && cp ./docs/example/index.html ./dist/example/",
     "build:rem:components": "webpack --config build/webpack.dist.components.rem.conf.js",
     "build:px:components": "webpack --config build/webpack.dist.components.px.conf.js",
     "build:prod": "webpack --config build/webpack.dist.prod.conf.js",
