--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --content-base example/ --port 1234 --inline --hot --host 0.0.0.0 --config build/webpack.dev.conf.js",
-    "build:example": "webpack --config build/webpack.dev.conf.js && cp ./example/index.html ./site/example/",
+    "build:example": "webpack --config build/webpack.dev.conf.js && cp ./example/index.html ./docs/example/",
     "build:rem:components": "webpack --config build/webpack.dist.components.rem.conf.js",
     "build:px:components": "webpack --config build/webpack.dist.components.px.conf.js",
     "build:prod": "webpack --config build/webpack.dist.prod.conf.js",
